47
================

07/06/23 Filter deceased animals out of trial adoption ending alerts
06/06/23 Shelter view grouping for litters
06/06/23 Tidy up license screen code, show animal emblems
06/06/23 Link movement/licence documents to animals+people instead of copying #1261
05/06/23 Clear revision number when changing a report name/category
04/06/23 Move diary task execute button to animal/person diary tabs #1292
03/06/23 Option to edit/request payments from Move->Adopt an animal (Saggi) #1294
01/06/23 Remove unused images from RescueGroups/AdoptAPet before publish #1291
01/06/23 Add given dates to medical CSV export under SQL Interface
01/06/23 Fix bug where litter IDs containing apostrophes didn't show littermates
01/06/23 Support for additional fields on movements (Saggi Neuemann) #55
31/05/23 Mobile photo uploader: option to upload to recently adopted animals
31/05/23 Option to set trial adoption default length #750
31/05/23 Bring active boarders onto the shelter and show location fields #623
30/05/23 Only check/expire inactive litters as part of the batch
30/05/23 Option to auto complete diary notes when animals are deceased
29/05/23 Include units in emblems on daily observations #489
28/05/23 Daily observations quicklink #489
28/05/23 Remove modernizr - no longer needed #1287
28/05/23 Use smaller thumbnails for media table view
28/05/23 Set couple from online form if surname2 is present and has value #1264
27/05/23 Fix bug where additional field changes were not being audited
27/05/23 Do not create ES01/02 log messages if they already exist #1286
26/05/23 Add rename facility to document repository #389
24/05/23 Fix bug when filtering media after tablesorter upgrade
24/05/23 Add VaccOutstandingCount to animal query for views/service calls
24/05/23 Searchable additional fields on advanced find screens #74
24/05/23 SACmetrics: omit months with dates in the future
23/05/23 Fix bug when exporting incident CSV from SQL interface->Export