@@ -1479,6 +1479,7 @@ $(function() {
                 '<option value="litter">' + _("Litter") + '</option>',
                 '<option value="location">' + _("Location") + '</option>',
                 '<option value="locationbreed">' + _("Location and Breed") + '</option>',
+                '<option value="locationlitter">' + _("Location and Litter") + '</option>',
                 '<option value="locationspecies">' + _("Location and Species") + '</option>',
                 '<option value="locationspeciesage">' + _("Location and Species (Age)") + '</option>',
                 '<option value="locationtype">' + _("Location and Type") + '</option>',
@@ -1497,6 +1498,7 @@ $(function() {
                 '<option value="speciescode">' + _("Species and Code") + '</option>',
                 '<option value="speciescolor">' + _("Species and Color") + '</option>',
                 '<option value="status">' + _("Status") + '</option>',
+                '<option value="statuslocation">' + _("Status and Location") + '</option>',
                 '<option value="statusspecies">' + _("Status and Species") + '</option>',
                 '<option value="type">' + _("Type") + '</option>',
                 '<option value="unit">' + _("Unit") + '</option>',
