@@ -1,6 +1,7 @@
 47
 ================
 
+07/06/23 Shelter view groups: Location and Litter, Status and Location
 07/06/23 Filter deceased animals out of trial adoption ending alerts
 06/06/23 Shelter view grouping for litters
 06/06/23 Tidy up license screen code, show animal emblems
